<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@android:color/transparent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/popup_hor_margin"
    android:layout_marginEnd="@dimen/popup_hor_margin"
    android:layout_marginTop="@dimen/popup_vert_margin"
    android:layout_marginBottom="@dimen/popup_vert_margin"
    android:elevation="@dimen/elevation_over_drawer2"
    android:id="@+id/instructions_Cl">

    <ScrollView
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:background="@drawable/rounded_corners_layout"
        android:padding="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/instructionsHead1"
                android:text="@string/instructions_label" />

            <TextView
                style="@style/instructionsHead2"
                android:text="@string/general_label" />

            <TextView
                style="@style/instructionsBody"
                android:text="@string/general_instructions_text" />

            <TextView
                style="@style/instructionsBoldBody"
                android:text="@string/use_headphones_instructions_text" />

            <TextView
                style="@style/instructionsHead2"
                android:text="@string/scoring_system_label" />

            <TextView
                style="@style/instructionsBody"
                android:text="@string/scoring_system_text" />


        </LinearLayout>
    </ScrollView>


    <ImageView
        android:id="@+id/close_instructions_btn"
        android:layout_width="@dimen/scale_hint_size"
        android:layout_height="@dimen/scale_hint_size"
        android:src="@drawable/red_x_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>