<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/main_menu_btn_height"
    android:gravity="center_vertical"
    android:elevation="@dimen/mm_button_elevation">

    <TextView
        android:id="@+id/l_and_d_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_weight="3"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/highscore_label"
        android:textAlignment="center"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/main_menu_text_size" />

    <TextView
        android:id="@+id/l_and_d_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_weight="2"
        android:background="@drawable/extended_rounded_corners_gradient_btn"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:hint="@string/highscore_hint"
        android:text="@string/default_highscore"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/main_menu_text_size" />

</merge>