<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/widget_container"
    android:background="@drawable/backgroundnotes"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/widget_icon_height"
            android:src="@drawable/kote_temp_3dlogov2"
            android:adjustViewBounds="true"
            android:contentDescription="@string/icon_content_desc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_difficulty_txt"
            android:layout_marginStart="4dp"
            android:id="@+id/diff_label_widget_tv"
            android:textSize="@dimen/widget_label_text"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/default_score_txt"
        android:id="@+id/highscore_widget_tv"
        android:textSize="@dimen/widget_text"
        android:fontFamily="sans-serif-black"/>
</LinearLayout>