<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_menu_cl"
    tools:context="dar.games.music.capstonekote.ui.mainmenu.MainMenuFragment"
    android:background="@color/backgroundColor">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hor_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_wall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/screen_shoulders_margin" />

    <FrameLayout
        android:id="@+id/login_top_drawer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_drawer_menu_height"
        android:background="@drawable/top_drawer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/player_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/default_hello_text"
            android:textColor="@android:color/white"
            android:textSize="26sp" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/screen_shoulders_margin"
        android:layout_marginTop="31dp"
        android:background="@drawable/plain_rounded_corners"
        android:elevation="8dp"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/login_top_drawer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_top_drawer">

        <ImageButton
            android:id="@+id/instruction_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/instructions_content_desc"
            android:focusable="true"
            android:scaleType="center"
            android:src="@android:drawable/ic_dialog_info"
            android:tint="@android:color/darker_gray" />

        <FrameLayout
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>


    </LinearLayout>


    <include
        android:id="@+id/diff_layout"

        layout="@layout/difficulties_layout"
        android:elevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_guideline" />

    <Button
        android:id="@+id/start_game_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_menu_btn_height"
        android:background="@drawable/rounded_corners_button"
        android:text="@string/start_game"
        android:textSize="@dimen/main_menu_text_size"
        android:textAllCaps="false"
        android:layout_marginStart="@dimen/screen_shoulders_margin"
        android:layout_marginEnd="@dimen/screen_shoulders_margin"
        app:layout_constraintEnd_toEndOf="@+id/diff_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hor_guideline" />

    <LinearLayout
        android:id="@+id/menu_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/screen_shoulders_margin"
        android:layout_marginEnd="@dimen/screen_shoulders_margin"
        android:orientation="horizontal"
        android:paddingTop="6dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_game_btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/highscore_label"
                android:textAlignment="textEnd"
                android:textSize="@dimen/main_menu_text_size" />

            <TextView
                android:id="@+id/highscore_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/highscore_hint"
                android:text="@string/default_highscore"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/main_menu_text_size" />


    </LinearLayout>



    <include
        android:id="@+id/instructions_view"
        layout="@layout/instructions_layout"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/last_games_view"
        layout="@layout/last_games_layout"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="32dp" />

    <ImageView
        android:id="@+id/leaderboard_btn"
        android:layout_width="36dp"
        android:layout_height="32dp"
        android:layout_marginEnd="6dp"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/games_controller_grey"
        android:tint="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/instruction_btn"
        app:layout_constraintTop_toTopOf="@+id/top_guideline"
        android:contentDescription="@string/leaderboard_content_desc" />

    <ImageView
        android:id="@+id/last_games_btn"
        android:layout_width="36dp"
        android:layout_height="32dp"
        android:layout_marginEnd="6dp"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/last_games_icon"
        android:tint="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/last_games_icon"
        app:layout_constraintEnd_toStartOf="@+id/leaderboard_btn"
        app:layout_constraintTop_toTopOf="@+id/top_guideline" />



</androidx.constraintlayout.widget.ConstraintLayout>